add static styles

--- a/site/assets/main.css
+++ b/site/assets/main.css
@@ -5,3 +5,7 @@
 @import './components.css';
 
 @tailwind utilities;
+
+@import './static/css/style.css';
+@import './static/css/plugins.css';
+@import './static/css/patches.css';
