--- a/site/components/product/ProductView/ProductView.module.css
+++ b/site/components/product/ProductView/ProductView.module.css
@@ -13,7 +13,7 @@
 }
 
 .sliderContainer {
-  @apply flex items-center justify-center overflow-x-hidden bg-violet;
+  @apply flex items-center justify-center overflow-x-hidden bg-black;
 }
 
 .imageContainer {
