--- a/site/components/common/AdaptiveVideoPlayer/AdaptiveVideo.module.css
+++ b/site/components/common/AdaptiveVideoPlayer/AdaptiveVideo.module.css
@@ -26,6 +26,21 @@
   }
 }
 
+
+
+.small {
+  @media (min-width: 480px) and (max-width: 768px) {
+    display: block;
+  }
+}
+
+
+.large {
+  @media (min-width: 768px) {
+    display: block;
+  }
+}
+
 .button {
   position: absolute;
   top: 50%;
